--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "nprogress": "^0.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
